...
        android:layout_gravity="center"
        android:padding="30dp"
        android:background="@color/white"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/checkboxPrice"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/minPriceTil"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/minPriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/min_price"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxPriceTil"
                android:layout_width="150dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/maxPriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/max_price"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTil"
            android:layout_width="match_parent"
            android:layout_below="@id/priceTil"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:hint="@string/address"
                android:padding="16dp"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_location"
                android:gravity="center_vertical"
                android:background="@android:drawable/editbox_background"/>
...
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/spots"
            android:spinnerMode="dialog" />
        <!--Requirement-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requirementTil"
            android:layout_width="match_parent"
            android:layout_below="@id/spotSpinner"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/requirementEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descrip"
                android:autofillHints="home"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/requirementTil"
            android:layout_centerInParent="true"
            android:text="@string/submit"
            android:layout_marginTop="10dp" />
...
